--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Pixels Art</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <header>
-    <h1 id = 'title'>Paleta de Cores</h1>
+    <h1 id="title">Paleta de Cores</h1>
 </header>
 <body>
-    
+    <div>
+        <table id="color-palette">
+            <tr>
+                <td class="color black"></td>
+                <td class="color red"></td>
+                <td class="color purple"></td>
+                <td class="color green"></td>
+            </tr>
+        </table>
+    </div>
+<script src="scripts.js" ></script>
 </body>
 </html>
