--- a/index.html
+++ b/index.html
@@ -11,17 +11,50 @@
 <header>
     <h1 id="title">Paleta de Cores</h1>
 </header>
+
 <body>
-    <div>
-        <table id="color-palette">
-            <tr>
-                <td class="color black"></td>
-                <td class="color red"></td>
-                <td class="color purple"></td>
-                <td class="color green"></td>
-            </tr>
-        </table>
+    <section id="color-palette">
+        <div class="color black"></div>
+        <div class="color red"></div>
+        <div class="color purple"></div>
+        <div class="color green"></div>
+    </section>
+    <div id="pixel-board">
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
     </div>
-<script src="scripts.js" ></script>
+    <div id="pixel-board">
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+    </div>
+    <div id="pixel-board">
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+    </div>
+    <div id="pixel-board">
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+    </div>
+    <div id="pixel-board">
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+    </div>
+    <script src="scripts.js"></script>
 </body>
+
 </html>
