--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
 <body>
     <section id="color-palette">
-        <div class="color black"></div>
-        <div class="color red"></div>
-        <div class="color purple"></div>
-        <div class="color green"></div>
+        <div class=" color selected" id="black"></div>
+        <div class="color" id="red"></div>
+        <div class="color" id="purple"></div>
+        <div class="color" id="green"></div>
     </section>
     <div id="pixel-board">
         <div class="pixel"></div>
