Melhora código e resolve requisito 9

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,14 +10,16 @@
 <header>
     <h1 id="title">Paleta de Cores</h1>
 </header>
-
 <body>
     <section id="color-palette">
-        <div class=" color selected" id="black"></div>
-        <div class="color" id="red"></div>
+        <div class="color selected" id="black"></div>
+        <div class="color"  id="red"></div>
         <div class="color" id="purple"></div>
         <div class="color" id="green"></div>
     </section>
+    <div class="clear">
+        <button id="clear-board">Limpar</button>
+    </div>
     <div id="pixel-board">
         <div class="pixel"></div>
         <div class="pixel"></div>
@@ -56,5 +57,4 @@
     </div>
     <script src="scripts.js"></script>
 </body>
-
 </html>
